Fixed the flex spacing at very narrow viewports.

--- a/public/index.css
+++ b/public/index.css
@@ -264,4 +264,8 @@ at ~60% screen size, and kinda dumb as the page gets smaller. */
   #main-content {
     margin-left: 8px;
   }
+
+  #flex-spacer {
+    width: 0px;
+  }
 }
